--- a/cloudreservation.html
+++ b/cloudreservation.html
@@ -29,50 +29,55 @@
 </head>
 <body data-spy="scroll" style="position: relative;">
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-  <!--   <div class="container d-flex align-items-center">
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+        <!--   <div class="container d-flex align-items-center">
 
-    <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
-       Uncomment below if you prefer to use an image logo 
- <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+           <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
+              Uncomment below if you prefer to use an image logo
+        <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
+        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
+        <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+            <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+            </ul>
+        </nav><!-- .nav-menu -->
 
 
-    
-  </header><!-- End Header -->
 
-	
+    </header><!-- End Header -->
 
-  <h2 id="sampleHead">Cloud Reservation System for Lasertag Facilities</h2>
+
+    <div class="section-title sampleHead">
+        <h2><strong>CLOUD RESERVATION SYSTEM FOR LASERTAG FACILITIES</strong></h2>
+    </div>
 
     <div id="sampleWordDiv">
         <p>
-            This client-facing site is a reservation system used by client lasertag facilities to sign customers in. 
-            It utilizes a USB mag stripe reader to read the ID number of a player card swiped upon arrival. 
-            The system collects and stores user information for game play, marketing, and player tracking. 
-            The reservation system has a customer-facing kiosk component as well as an employee-facing admin component. 
+            This client-facing site is a reservation system used by client lasertag facilities to sign customers in.
+            It utilizes a USB mag stripe reader to read the ID number of a player card swiped upon arrival.
+            The system collects and stores user information for game play, marketing, and player tracking.
+            The reservation system has a customer-facing kiosk component as well as an employee-facing admin component.
         </p>
 
         <p>
             Employees at the lasertag facility use the admin portion of the reservation system, pictured below, to register
-            a player for a specific session. When a player card is swiped into the system by an employee, the card number is 
-            saved to the database along with session information. Javascript is used to allow the employee to navigate between session 
+            a player for a specific session. When a player card is swiped into the system by an employee, the card number is
+            saved to the database along with session information. Javascript is used to allow the employee to navigate between session
             pages and perform edits to the player file. Once a game is initiated by an employee, all player information is sent to the lasertag game computer.
         </p>
 
         <p>
-            Players then swipe the card at a kiosk to enter their personal information and agree to terms of service. When that happens, the kiosk queries 
-            the database to verify that the card is registered. As long as it is, it permits the customer to complete the sign-in process. 
+            Players then swipe the card at a kiosk to enter their personal information and agree to terms of service. When that happens, the kiosk queries
+            the database to verify that the card is registered. As long as it is, it permits the customer to complete the sign-in process.
             If the card is not registered, it will display an error.
         </p>
+    </div>
+
+    <div class="samplePicDiv">
+        <img class="samplePics" src="/images/cloudreservation1.png" alt="Cloud Reservation Pic 1">
     </div>
 
 
@@ -82,36 +87,34 @@
 
 
 
-	
-
-      <!-- ======= Footer ======= -->
-      <footer id="footer">
-          <div id="mainPageFoot">
-              <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-              <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
-          </div>
-      </footer><!-- End Footer -->
-      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+        <div id="mainPageFoot">
+            <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
+            <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
+        </div>
+    </footer><!-- End Footer -->
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
 
 
 
 
 
-      <!-- Vendor JS Files -->
-      <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
-      <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
-      <script src="https://www.williambreindel.com/js/validate.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
-      <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
-      <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
-      <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
-      <script src="https://www.williambreindel.com/js/aos.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
+    <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
+    <script src="https://www.williambreindel.com/js/validate.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
+    <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
+    <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
+    <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
+    <script src="https://www.williambreindel.com/js/aos.js"></script>
 
-      <!-- Template Main JS File -->
-      <script src="https://www.williambreindel.com/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="https://www.williambreindel.com/js/main.js"></script>
 
 </body>
 </html>
