--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
       <!-- ======= Footer ======= -->
       <footer id="footer">
           <div id="mainPageFoot">
-              <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-              <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
+              <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2021 -  William Breindel </a>
+              <span>Icons courtesy of <a target="_blank" href="https://icons8.com">Icons8</a></span>
           </div>
       </footer><!-- End Footer -->
       <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
