--- a/techportal.html
+++ b/techportal.html
@@ -76,7 +76,7 @@
 
 
     <div class="samplePicDiv">
-        <img id="techPortalPic1" src="/images/techportal1.png" alt="Tech Portal">
+        <img class="samplePics" src="/images/techportal1.png" alt="Tech Portal">
     </div>
 
 
@@ -88,8 +88,8 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div id="mainPageFoot">
-            <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-            <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
+            <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2021 -  William Breindel </a>
+            <span>Icons courtesy of<a target="_blank" href="https://icons8.com">Icons8</a></span>
         </div>
     </footer><!-- End Footer -->
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
