--- a/ticketing.html
+++ b/ticketing.html
@@ -29,29 +29,30 @@
 </head>
 <body data-spy="scroll" style="position: relative;">
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-  <!--   <div class="container d-flex align-items-center">
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+        <!--   <div class="container d-flex align-items-center">
 
-    <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
-       Uncomment below if you prefer to use an image logo 
- <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+           <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
+              Uncomment below if you prefer to use an image logo
+        <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
+        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
+        <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+            <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+            </ul>
+        </nav><!-- .nav-menu -->
 
 
-    
-  </header><!-- End Header -->
 
-	
+    </header><!-- End Header -->
 
-    <h2 id="sampleHead">Ticketing System</h2>
+    <div class="section-title sampleHead">
+        <h2><strong>TICKETING SYSTEML</strong></h2>
+    </div>
+
 
     <div id="sampleWordDiv">
         <p>
@@ -65,6 +66,12 @@
             however manual changes are tracked for auditing purposes. E-mail status updates are automatically generated and sent to clients based on ticket priority.
         </p>
     </div>
+    <div class="samplePicDiv">
+        <img class="samplePics" src="/images/ticketing1.png" alt="Ticketing System Pic 1">
+    </div>
+    <div class="samplePicDiv">
+        <img class="samplePics" src="/images/ticketing2.png" alt="Ticketing System Pic 2">
+    </div>
 
 
 
@@ -73,36 +80,35 @@
 
 
 
-	
 
-      <!-- ======= Footer ======= -->
-      <footer id="footer">
-          <div id="mainPageFoot">
-              <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-              <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
-          </div>
-      </footer><!-- End Footer -->
-      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
-
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+        <div id="mainPageFoot">
+            <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
+            <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
+        </div>
+    </footer><!-- End Footer -->
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
 
 
 
 
-      <!-- Vendor JS Files -->
-      <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
-      <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
-      <script src="https://www.williambreindel.com/js/validate.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
-      <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
-      <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
-      <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
-      <script src="https://www.williambreindel.com/js/aos.js"></script>
 
-      <!-- Template Main JS File -->
-      <script src="https://www.williambreindel.com/js/main.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
+    <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
+    <script src="https://www.williambreindel.com/js/validate.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
+    <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
+    <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
+    <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
+    <script src="https://www.williambreindel.com/js/aos.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="https://www.williambreindel.com/js/main.js"></script>
 
 </body>
 </html>
