--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -39,7 +39,7 @@
         <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
         <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-            <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
+            <h1 class="logo mr-auto"> <a class="navbar-brand" href="./index.html"><span>William </span>Breindel</a></h1>
             <ul class="nav nav-pills">
                 <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
             </ul>
