--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <link href="https://www.williambreindel.com/css/owl.carousel.min.css" rel="stylesheet">
     <link href="https://www.williambreindel.com/css/aos.css" rel="stylesheet">
     <link href="https://www.williambreindel.com/css/remixicon.css" rel="stylesheet">
+    <link href="https://www.williambreindel.com/css/icofont/icofont.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-  
+
     <link href="https://www.williambreindel.com/css/style.css" rel="stylesheet">
     <link href="https://www.williambreindel.com/css/newstuff.css" rel="stylesheet">
 
@@ -39,7 +40,7 @@
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
+	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="./index.html"><span>William </span>Breindel</a></h1>
         <ul class="nav nav-pills">
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1">Home</a></li>
 
